<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/iv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDetailPoster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/detail_poster_description"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLabelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAddFavourite" />

        <View
            style="@style/BorderStyle"
            app:layout_constraintBottom_toTopOf="@id/tvOriginalTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glCenter"
            app:layout_constraintTop_toBottomOf="@+id/ivAddFavourite" />

        <TextView
            android:id="@+id/tvLabelOriginalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvOriginalTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <View
            style="@style/BorderStyle"
            app:layout_constraintBottom_toTopOf="@id/tvRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvOriginalTitle" />

        <TextView
            android:id="@+id/tvLabelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitle" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginalTitle" />

        <View
            style="@style/BorderStyle"
            app:layout_constraintBottom_toTopOf="@id/tvReleaseDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRating" />

        <TextView
            android:id="@+id/tvLabelReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_release"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelRating" />


        <TextView
            android:id="@+id/tvReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glCenter"
            app:layout_constraintTop_toBottomOf="@+id/tvRating" />

        <View
            style="@style/BorderStyle"
            app:layout_constraintBottom_toTopOf="@id/tvLabelDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate" />

        <TextView
            android:id="@+id/tvLabelDescription"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_movie"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelReleaseDate" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_movie"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelDescription" />


        <ImageView
            android:id="@+id/ivAddFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/description_add_to_favourite"
            app:layout_constraintBottom_toBottomOf="@+id/ivDetailPoster"
            app:layout_constraintEnd_toEndOf="@+id/ivDetailPoster"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailPoster"
            app:srcCompat="@drawable/star_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>